data + process + model bài toán 1